// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

import "mesos/docker/spec.proto";

package mesos.internal.slave.docker;

/**
 * A Docker Image reference and the layer ids of the layers that comprise the
 * image. The layerIds are ordered, with the root layer id (no parent layer id)
 * first and the leaf layer id last.
 */
message Image {
  required .docker.spec.ImageReference reference = 1;

  // The order of the layers represents the dependency between layers.
  repeated string layer_ids = 2;
}


message Images {
  repeated Image images = 1;
}
